<resources>
    <string name="app_name">fridgeDemo2</string>
    <string name="button">Button</string>
    <string name="camera_btn">手动拍照上传</string>
    <string name="todo">TODO</string>
    <string name="gps_btn">定位获取上传</string>
    <string name="gpsDefaultText">正在进行定位...</string>
    <string name="gpsResultDefault">定位获取结果为：</string>
    <string name="backHome_btn">返回</string>
    <string name="IO_btn">IO采集上传</string>
    <string name="tmp_btn">温度采集上传</string>
    <string name="reboot_btn">重启设备</string>
    <string name="auto_iv">拍摄预览</string>
    <string name="auto_btn">自动拍照上传</string>
</resources>
