<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/tmp_btn"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:layout_marginTop="32dp"
        android:onClick="startTemperature"
        android:text="@string/tmp_btn"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/IO_btn"
        android:layout_width="253dp"
        android:layout_height="0dp"

        android:layout_marginTop="32dp"
        android:onClick="startIO"
        android:text="@string/IO_btn"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tmp_btn" />

    <Button
        android:id="@+id/camera_btn"
        android:layout_width="253dp"
        android:layout_height="0dp"

        android:layout_marginTop="32dp"
        android:onClick="startCamera"
        android:text="@string/camera_btn"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gps_btn" />

    <Button
        android:id="@+id/autoCamera_btn"
        android:layout_width="253dp"
        android:layout_height="0dp"

        android:layout_marginTop="32dp"
        android:onClick="startAutoCamera"
        android:text="@string/auto_btn"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/camera_btn" />

    <Button
        android:id="@+id/gps_btn"
        android:layout_width="253dp"
        android:layout_height="0dp"

        android:layout_marginTop="32dp"
        android:onClick="startLocation"
        android:text="@string/gps_btn"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IO_btn" />

    <Button
        android:id="@+id/reboot_btn"
        android:layout_width="253dp"
        android:layout_height="0dp"

        android:layout_marginTop="32dp"
        android:onClick="rebootDevice"
        android:text="@string/reboot_btn"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autoCamera_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>